--- a/src/app/landing/why-mandisa/why-mandisa.component.html
+++ b/src/app/landing/why-mandisa/why-mandisa.component.html
@@ -6,8 +6,8 @@
                 <p class="fs-5">We provide the best B2B experience to empower our partners with our full range of organic and natural products</p>
             </div>
             @for(item of data ; track item) {
-              <div class="col-md-3 col-6 my-3">
-                <div class="content text-center">
+              <div class="col-lg-3 col-6 my-3">
+                <div class="content text-center p-3">
                    <div class="content-img">
                       <img [src]="item.imagePath" alt="item.imagePath" height="30px" width="auto">
                    </div>
