--- a/src/app/layout/footer/footer.component.html
+++ b/src/app/layout/footer/footer.component.html
@@ -37,7 +37,7 @@
                 <h4 class="text-default">Get In Touch</h4>
                 <ul class="list-unstyled m-0 p-0">
                     <li> Connect with us on social media </li>
-                    <li> IX TOWERS, Dongtancheomdansaneop 1-ro. A2427 Hwaseong-si, Gyeonggi-do. Republic Of Korea </li>
+                    <!-- <li> IX TOWERS, Dongtancheomdansaneop 1-ro. A2427 Hwaseong-si, Gyeonggi-do. Republic Of Korea </li> -->
                 </ul>
             </div>
         </div>
