add icons to footer

--- a/src/app/layout/footer/footer.component.html
+++ b/src/app/layout/footer/footer.component.html
@@ -25,11 +25,26 @@
             <div class="col-xl-4 col-md-6 col-12 my-3">
                 <h4 class="text-default">Contact Info</h4>
                 <ul class="list-unstyled m-0 p-0">
-                    <li> 20 Gomeai, Fleming. Alexandria 21531, Egypt. </li>
-                    <li> IX TOWERS, Dongtancheomdansaneop 1-ro. A2427 Hwaseong-si, Gyeonggi-do. Republic Of Korea </li>
-                    <li><a>+20220202020</a></li>
-                    <li><a>+20312322222</a></li>
-                    <li><a>{{'mandisa@gmail.com'}}</a></li> 
+                    <li> 
+                       <img src="assets/images/icons/telegram.svg" alt="telegram" height="20px" width="20px"/>
+                       <span>20 Gomeai, Fleming. Alexandria 21531, Egypt.</span>    
+                    </li>
+                    <li> 
+                        <img src="assets/images/icons/telegram.svg" alt="telegram" height="20px" width="20px"/>
+                        <span>IX TOWERS, Dongtancheomdansaneop 1-ro. A2427 Hwaseong-si, Gyeonggi-do. Republic Of Korea</span>
+                    </li>
+                    <li>
+                        <img src="assets/images/icons/phone.svg" alt="phone" height="20px" width="20px"/>
+                        <a>+20220202020</a>
+                    </li>
+                    <li>
+                        <img src="assets/images/icons/phone.svg" alt="phone" height="20px" width="20px"/>
+                        <a>+20312322222</a>
+                    </li>
+                    <li>
+                        <img src="assets/images/icons/email.svg" alt="email" height="20px" width="20px"/>
+                        <a>{{'mandisa@gmail.com'}}</a>
+                    </li> 
                 </ul>
             </div>
 
@@ -37,7 +52,13 @@
                 <h4 class="text-default">Get In Touch</h4>
                 <ul class="list-unstyled m-0 p-0">
                     <li> Connect with us on social media </li>
-                    <!-- <li> IX TOWERS, Dongtancheomdansaneop 1-ro. A2427 Hwaseong-si, Gyeonggi-do. Republic Of Korea </li> -->
+                    <li>
+                       <ul class="list-unstyled p-0 m-0"> 
+                           <li class="d-inline-block"> <img src="assets/images/icons/facebook.svg" alt="facebook" height="20px" width="20px" class="mx-2"/></li>
+                           <li class="d-inline-block"> <img src="assets/images/icons/instagram.svg" alt="instagram" height="20px" width="20px" class="mx-2"/></li>
+                           <li class="d-inline-block"> <img src="assets/images/icons/twitter.svg" alt="twitter" height="20px" width="20px" class="mx-2"/></li>
+                       </ul>
+                    </li>
                 </ul>
             </div>
         </div>
